--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "react": ">=17.0.0"
+    "react": ">=17.0.0",
+    "react-native": ">=0.70.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.20.0",
-    "@testing-library/react": "^14.2.1",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
+    "@testing-library/react-native": "^12.4.3",
     "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.19",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.6.3",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "2.8.8",
     "react": "18.2.0",
-    "react-dom": "^18.2.0",
+    "react-native": "0.73.4",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.2",
     "tsup": "^8.0.2",
