--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "source": "src/index.tsx",
+  "license": "MIT",
   "react-native": "src/index.tsx",
   "scripts": {
     "clean": "rm -rf node_modules",
